objects/LLC_BI__Budget_Line_Item__c.object
<CustomObject>
    <description>The individual line items that make up the overall budget.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Amount_Budgeted__c</fullName>
        <description>The amount budgeted for this line item.</description>
        <label>Amount Budgeted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Budget__c</fullName>
        <description>The master detail relationship to the budget.</description>
        <label>Budget</label>
        <referenceTo>LLC_BI__Budget__c</referenceTo>
        <relationshipLabel>Budget Line Item</relationshipLabel>
        <relationshipName>Budget_Line_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>Administrators and users manually populate this optional field to track individual budget costs as a certain type (e.g. hard cost or soft cost).</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financing cost</fullName>
                </value>
                <value>
                    <fullName>Hard cost</fullName>
                </value>
                <value>
                    <fullName>Interest reserve</fullName>
                </value>
                <value>
                    <fullName>Land cost</fullName>
                </value>
                <value>
                    <fullName>Soft cost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The budget line item description</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Notes__c</fullName>
        <description>Any notes about the budget line item.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Order__c</fullName>
        <description>The budget line item display order.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Pending_Amount__c</fullName>
        <description>The sum of all non-approved funds against the budget line item.</description>
        <label>Pending Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Budgeted__c</fullName>
        <description>--DEPRECATED-- The percent budgeted for this line item.</description>
        <label>-D Percent Budgeted</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Disbursed__c</fullName>
        <description>The total percentage of the budget line item that has been disbursed.</description>
        <formula>IF(LLC_BI__Amount_Budgeted__c == 0, 0, LLC_BI__Total_Disbursed_Amount__c / LLC_BI__Amount_Budgeted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Disbursed</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_Remaining_Disbursement__c</fullName>
        <description>The percentage of budget that remains for a specific line item.</description>
        <formula>IF(LLC_BI__Amount_Budgeted__c == 0, 0, LLC_BI__Remaining_Disbursement__c / LLC_BI__Amount_Budgeted__c)</formula>
        <label>Percent Remaining Disbursement</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Percent_of_Budget__c</fullName>
        <description>The percentage of the overall budget represented by this budget line item.</description>
        <formula>LLC_BI__Amount_Budgeted__c / LLC_BI__Budget__r.LLC_BI__Total_Budget_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent of Budget</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Remaining_Disbursement__c</fullName>
        <description>The total amount of the budget that remains for a budget line item.</description>
        <formula>LLC_BI__Amount_Budgeted__c -  LLC_BI__Total_Disbursed_Amount__c -  LLC_BI__Pending_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Disbursement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Percent_of_Budget__c</fullName>
        <description>Enter the percent of the budget to automatically provision when a new budget is created.</description>
        <label>Template Percent of Budget</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Disbursed_Amount__c</fullName>
        <description>The sum of all disbursed funds against the budget line item.</description>
        <label>Total Disbursed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Budget Line Item</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>LLC_BI__Description__c</columns>
        <columns>LLC_BI__Amount_Budgeted__c</columns>
        <columns>LLC_BI__Budget__c</columns>
        <columns>LLC_BI__Notes__c</columns>
        <columns>LLC_BI__Percent_Budgeted__c</columns>
        <columns>LLC_BI__Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CLA-BD-{0000000}</displayFormat>
        <label>Budget Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Tpl_LineItem_Config_Defaults_Clash</fullName>
        <active>true</active>
        <description>Ensures that amount budgeted and percent of budget fields aren&apos;t both set at the same time.</description>
        <errorConditionFormula>IF (AND(LLC_BI__Budget__r.LLC_BI__Is_Template__c = True, NOT(ISNULL(LLC_BI__Amount_Budgeted__c)), NOT(ISNULL(LLC_BI__Template_Percent_of_Budget__c))), true, false)</errorConditionFormula>
        <errorMessage>Please enter an Amount Budgeted or a Template Percent of Budget. Both cannot be entered at once, you must choose to enter one or the other.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Tpl_Percent_of_Budget_Cannot_Exceed_100</fullName>
        <active>true</active>
        <description>Ensures that the budget line item &quot;Template Percent of Budget&quot; field cannot be set to over 100%.</description>
        <errorConditionFormula>IF(OR(ISNULL(LLC_BI__Template_Percent_of_Budget__c),AND(LLC_BI__Budget__r.LLC_BI__Is_Template__c = True,(( LLC_BI__Template_Percent_of_Budget__c * 100 ) &lt; 101))),false,true)</errorConditionFormula>
        <errorMessage>The &quot;Template Percent of Budget&quot; field value cannot exceed 100%.</errorMessage>
    </validationRules>
</CustomObject>